--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ litellm = "^1.57.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
+isort = "^5.13.2"
+mypy = "^1.14.1"
 
 [build-system]
 requires = ["poetry-core"]
