--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.10"
 aiogram = "^3.17.0"
 python-dotenv = "^1.0.1"
 litellm = "^1.57.8"
+pydantic = "^2.10.5"
+g4f = {extras = ["all"], version = "^0.4.1.1"}
+openai = "^1.59.7"
 
 
 [tool.poetry.group.dev.dependencies]
